--- a/acceuil.css
+++ b/acceuil.css
@@ -169,3 +169,22 @@ div.reseau div span{
     margin-left: 1em;
     text-align: center;
 }
+@media screen and (max-width:390px){
+
+    body{
+        display: flex;
+        flex-wrap: wrap;
+    }
+   /* header{
+    display: flex;
+    flex-wrap: wrap;
+   } */
+    img,.image{
+        display: none;
+    }
+    div.reseau{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+}
